--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <header id="main-header">
   <h1 id="logo">Mi Portfolio</h1>
-  <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+  <button class="menu-toggle">☰</button>
   <nav>
     <ul id="nav-links">
       <li><a href="#sobre-mi">Sobre Mí</a></li>
@@ -22,10 +22,10 @@
     </ul>
   </nav>
 
-  <div class="lang-switcher">
-    <button onclick="changeLang('es')">ES</button>
-    <button onclick="changeLang('en')">EN</button>
-  </div>  
+<div class="lang-switcher">
+  <button data-lang="es">ES</button>
+  <button data-lang="en">EN</button>
+</div>
 </header>
 
 <section id="sobre-mi">
