--- a/index-en.html
+++ b/index-en.html
@@ -10,7 +10,7 @@
 <body>
 
 <header id="main-header">
-  <h1 id="logo">Mi Portfolio</h1>
+  <h1 id="logo">MYPORTFOLIO</h1>
   <button class="menu-toggle" onclick="toggleMenu()">☰</button>
   <nav>
     <ul id="nav-links">
@@ -22,10 +22,10 @@
     </ul>
   </nav>
 
-  <div class="lang-switcher">
-    <button onclick="changeLang('es')">ES</button>
-    <button onclick="changeLang('en')">EN</button>
-  </div>  
+<div class="lang-switcher">
+  <button data-lang="es">ES</button>
+  <button data-lang="en">EN</button>
+</div>
 </header>
 
 <section id="sobre-mi">
