--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
       <li><a href="#experiencia">Experiencia</a></li>
       <li><a href="#proyectos">Proyectos</a></li>
       <li><a href="#contacto">Contacto</a></li>
+      <li class="lang-switcher">
+        <button data-lang="es">ES</button>
+        <button data-lang="en">EN</button>
+      </li>
     </ul>
   </nav>
-
-<div class="lang-switcher">
-  <button data-lang="es">ES</button>
-  <button data-lang="en">EN</button>
-</div>
 </header>
 
 <section id="sobre-mi">
@@ -35,7 +34,7 @@
       <p data-i18n="about_text">Soy un graduado en Diseño y Desarrollo de Videjuegos interesado en el mundo de la programación, especialmente en IA y backend. A pesar de mis estudios y mi pasión por los videojuegos, tengo un perfil técnico centrado en la programación en Java con una arquitectura de microservicios.</p>
       <a href="CV_Spanish-Hugo Silva Gil.pdf" download class="boton-cv" data-i18n="download_cv">Descargar CV</a>
     </div>
-    <img src="05110359-42a1-43ff-94b1-8dea66a11206.png" alt="Sobre mí" class="about-image" />
+    <img src="FotoHugoChikita.png" alt="Sobre mí" class="about-image" />
   </div>
 </section>
 
@@ -43,17 +42,17 @@
   <h2>Habilidades Técnicas</h2>
   <ul>
     <li><b>Lenguajes de programación:</b> Angular, Java, C#, Python y conocimientos en JavaScript, HTML y Css</li>
-    <li><b>Bases de datos:</b> SQL, Mongo, y ORMs como Hibernate</li>
-    <li><b>Otros:</b> Metodologías Ágiles y control de versiones con GitHub</li>
+    <li><b>Bases de datos:</b> SQL, Mongo y ORMs como Hibernate</li>
+    <li><b>Otros:</b> Metodologías Ágiles y control de versiones con Git</li>
   </ul>
 </section>
 
 <section id="experiencia">
   <h2>Experiencia / Educación</h2>
   <ul>
-    <li>Bootcamp FullStack Java y Microservicios | Hiberus | Junio 2025 - Actualidad</li>
-    <li>Desarrollo Web + IA | Infoser | Febrero 2025 - Junio 2025</li>
-    <li>Grado en Diseño y Desarrollo de Videjuegos | Universidad Rey Juan Carlos | 2021 - 2025</li>
+    <li><b>Bootcamp FullStack Java y Microservicios</b> | Hiberus | Junio 2025 - Actualidad</li>
+    <li><b>Desarrollo Web + IA</b> | Infoser | Febrero 2025 - Junio 2025</li>
+    <li><b>Grado en Diseño y Desarrollo de Videjuegos </b>| Universidad Rey Juan Carlos | 2021 - 2025</li>
   </ul>
 </section>
 
@@ -96,7 +95,7 @@
   <p>Email: <a href="mailto:hugo_jobs@outlook.com">hugo_jobs@outlook.com</a></p>
   
   <div class="redes" style="margin-top: 20px; display: flex; justify-content: center; gap: 15px;">
-    <a href="https://github.com/TU-USUARIO" target="_blank" rel="noopener noreferrer">GitHub</a>
+    <a href="https://github.com/HSilvaa?tab=repositories" target="_blank" rel="noopener noreferrer">GitHub</a>
     <a href="https://www.linkedin.com/in/hugosilvagil" target="_blank" rel="noopener noreferrer">LinkedIn</a>
     <a href="https://itch.io/dashboard" target="_blank" rel="noopener noreferrer">Itch.io</a>
   </div>
@@ -105,7 +104,7 @@
 <section class="message-section">
   <h2>¡Envíame un mensaje!</h2>
   <p>¿Tienes una pregunta, propuesta o solo quieres saludar? ¡Adelante!</p>
-  <form id="contactForm" class="form-contacto" action="https://formsubmit.co/hugo.parla@hotmail.com" method="POST">
+  <form id="contactForm" class="form-contacto" action="https://formsubmit.co/hugo_jobs@outlook.com" method="POST">
     <div class="form-row">
       <div class="form-group">
         <label>Tu Nombre</label>
@@ -120,15 +119,15 @@
       <label>Tu Mensaje</label>
       <textarea name="message" rows="4" required placeholder="Escribe aquí..."></textarea>
     </div>
-    <input type="hidden" name="_next" value="http://127.0.0.1:5500/thanks.html" />
-    <button type="submit">SHOOT →</button>
+    <input type="hidden" name="_next" value="https://hsilvaa.github.io/MyPortfolio/thanks.html" />
+    <button type="submit">Enviar →</button>
   </form>
 </section>
 
 <footer>
   <p>© 2025 Hugo Silva</p>
   <div class="footer-social">
-    <a href="https://github.com/TU-USUARIO" target="_blank" rel="noopener noreferrer">GitHub</a>
+    <a href="https://github.com/HSilvaa?tab=repositories" target="_blank" rel="noopener noreferrer">GitHub</a>
     <a href="https://www.linkedin.com/in/hugosilvagil" target="_blank" rel="noopener noreferrer">LinkedIn</a>
     <a href="https://itch.io/dashboard" target="_blank" rel="noopener noreferrer">Itch.io</a>
 </div>
