--- a/index-en.html
+++ b/index-en.html
@@ -92,7 +92,7 @@
 <section id="contacto">
   <h2>Contact Me</h2>
   <p>Would you like to work with me? You can write to me or follow me on social media:</p>
-  <p>Email: <a href="mailto:hugo_jobs@outlook.com">hugo_jobs@outlook.com</a></p>
+  <p>Email: <a href="mailto:hsilva_jobs@outlook.com">hugo_jobs@outlook.com</a></p>
   
   <div class="redes" style="margin-top: 20px; display: flex; justify-content: center; gap: 15px;">
     <a href="https://github.com/HSilvaa?tab=repositories" target="_blank" rel="noopener noreferrer">GitHub</a>
@@ -104,7 +104,7 @@
 <section class="message-section">
   <h2>Send Me a Message!</h2>
   <p>Have a question, proposal, or just want to say hi? Go ahead!</p>
-  <form id="contactForm" class="form-contacto" action="https://formsubmit.co/hugo_jobs@outlook.com" method="POST">
+  <form id="contactForm" class="form-contacto" action="https://formsubmit.co/hsilva_jobs@outlook.com" method="POST">
     <div class="form-row">
       <div class="form-group">
         <label>Your Name</label>
