--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 <section id="contacto">
   <h2>Contáctame</h2>
   <p>¿Te gustaría trabajar conmigo? Puedes escribirme o seguirme en redes:</p>
-  <p>Email: <a href="mailto:hugo_jobs@outlook.com">hugo_jobs@outlook.com</a></p>
+  <p>Email: <a href="mailto:hsilva_jobs@outlook.com">hugo_jobs@outlook.com</a></p>
   
   <div class="redes" style="margin-top: 20px; display: flex; justify-content: center; gap: 15px;">
     <a href="https://github.com/HSilvaa?tab=repositories" target="_blank" rel="noopener noreferrer">GitHub</a>
@@ -104,7 +104,7 @@
 <section class="message-section">
   <h2>¡Envíame un mensaje!</h2>
   <p>¿Tienes una pregunta, propuesta o solo quieres saludar? ¡Adelante!</p>
-  <form id="contactForm" class="form-contacto" action="https://formsubmit.co/hugo_jobs@outlook.com" method="POST">
+  <form id="contactForm" class="form-contacto" action="https://formsubmit.co/hsilva_jobs@outlook.com" method="POST">
     <div class="form-row">
       <div class="form-group">
         <label>Tu Nombre</label>
